Fix gradle failures